# SEPM-single

task1/: .gitignore  CMakeLists.txt  sdc_client.cpp
task2/: CMakeLists.txt  Chat.h  FileWatcher.cpp  FileWatcher.h  ServerSelector.h  sdc_client.cpp  ui.qml
task2/ui/: LineEdit.qml  ui.qml
